# currency_converter

./: .env.example  Dockerfile  README.md  config.py  main.py  pyproject.toml  requirements.txt  start.sh
apps/currency/: dependencies.py  routers.py  schemas.py  services.py
apps/currency/providers/: base.py  schemas.py
apps/currency/providers/currate/: currate.py  schemas.py
apps/currency/routers/: routers.py  schemas.py
apps/currency/service/: schemas.py  service.py
apps/currency/tests/: conftest.py  test_currate.py
