[tool.poetry]
name = "currency-converter"
version = "0.1.0"
description = ""
authors = ["Sergey Fomichev <fomichev.ser.v@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
annotated-types = "0.5.0"
anyio = "3.7.1"
cachecontrol = "0.14.0"
certifi = "2023.7.22"
cffi = "1.16.0"
charset-normalizer = "3.3.2"
click = "8.1.7"
cryptography = "42.0.8"
fastapi = "0.103.1"
fastjsonschema = "2.20.0"
filelock = "3.15.4"
gunicorn = "22.0.0"
h11 = "0.14.0"
httpcore = "0.18.0"
httpx = "0.25.0"
idna = "3.4"
pydantic = "2.3.0"
pydantic-core = "2.6.3"
python-dotenv = "1.0.0"
requests = "2.32.3"
requests-toolbelt = "1.0.0"
sniffio = "1.3.0"
starlette = "0.27.0"
typing-extensions = "4.7.1"
urllib3 = "2.2.2"
uvicorn = "0.23.2"

[tool.poetry.group.dev.dependencies]
build = "1.2.1"
cleo = "2.1.0"
crashtest = "0.4.1"
distlib = "0.3.8"
dulwich = "0.21.7"
exceptiongroup = "1.1.3"
flake8 = "6.1.0"
iniconfig = "2.0.0"
installer = "0.7.0"
isort = "5.12.0"
jaraco-classes = "3.4.0"
jeepney = "0.8.0"
keyring = "24.3.1"
mccabe = "0.7.0"
more-itertools = "10.3.0"
msgpack = "1.0.8"
mypy = "1.10.0"
mypy-extensions = "1.0.0"
packaging = "24.1"
pexpect = "4.9.0"
pkginfo = "1.11.1"
platformdirs = "4.2.2"
pluggy = "1.5.0"
poetry = "1.8.3"
poetry-core = "1.9.0"
poetry-plugin-export = "1.8.0"
ptyprocess = "0.7.0"
pycodestyle = "2.11.0"
pycparser = "2.22"
pyflakes = "3.1.0"
pyproject-hooks = "1.1.0"
rapidfuzz = "3.9.3"
secretstorage = "3.3.3"
shellingham = "1.5.4"
tomlkit = "0.12.5"
trove-classifiers = "2024.5.22"
virtualenv = "20.26.3"

[tool.poetry.group.test.dependencies]
pytest = "8.2.2"
pytest-asyncio = "0.23.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
